Implemented some different font styles and quotes on blogpost-1.html.
Created new css file for general website relevant style information.

--- a/blogpost-1.html
+++ b/blogpost-1.html
@@ -86,7 +86,7 @@
                                 <figcaption>My caption of the picture</figcaption>
                             </figure>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
+                                <strong>Lorem</strong> ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
                                 dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
                                 nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis,
                                 sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec,
@@ -113,9 +113,18 @@
                                 feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.
                             </p>
 
+                            <blockquote>
+                                <p>You miss 100% of the shots you don’t take.</p>
+                                <cite>Wayne Gretzky</cite>
+                            </blockquote>
+
+                            <p>
+                                Feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.
+                            </p>
+
                             <h3>1.2 Headline</h3>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
+                                <em>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </em>Aenean commodo ligula eget
                                 dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
                                 nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis,
                                 sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec.
@@ -123,7 +132,7 @@
 
                             <h3>1.3 Headline</h3>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
+                                <u>Lorem ipsum dolor sit</u> amet, consectetuer adipiscing elit. Aenean commodo ligula eget
                                 dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
                                 nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis,
                                 sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec.
